--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "sass": "^1.32.10",
+    "sass-loader": "^10.1.1",
     "typescript": "~4.1.5"
   },
   "eslintConfig": {
